# DesktopRecorder

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-29-regionrecord-application-layer.md  2026-06-29-regionrecord-audio.md  2026-06-29-regionrecord-foundation.md  2026-06-29-regionrecord-recording-engine.md  2026-06-29-regionrecord-ui-redesign.md
docs/superpowers/specs/: 2026-06-29-regionrecord-tech-stack-design.md
packaging/icon/: RegionRecord.icns  generate.sh
packaging/linux/: build-appimage.sh
packaging/macos/: Info.plist
packaging/windows/: RegionRecord.rc
src/: ffmpeg_probe.cpp  ffmpeg_probe.h  main.cpp
src/app/: HotkeyCombo.cpp  HotkeyCombo.h  RecordingController.cpp  RecordingController.h  RecordingItem.cpp  RecordingItem.h  RecordingStore.cpp  RecordingStore.h  RegionPresets.cpp  RegionPresets.h
src/platform/: GlobalHotkey.h  GlobalHotkeyFactory.cpp  GlobalHotkeyMac.h  GlobalHotkeyMac.mm  GlobalHotkeyWindows.cpp  GlobalHotkeyWindows.h  GlobalHotkeyX11.cpp  GlobalHotkeyX11.h  WindowPicker.h  WindowPickerFactory.cpp  WindowPickerMac.h  WindowPickerMac.mm  WindowPickerWindows.cpp  WindowPickerWindows.h  WindowPickerX11.cpp  WindowPickerX11.h
src/recording/: AudioSource.cpp  AudioSource.h  FrameSource.cpp  FrameSource.h  MacFrameSource.h  MacFrameSource.mm  Mp4Encoder.cpp  Mp4Encoder.h  Recorder.cpp  Recorder.h  WaylandFrameSource.cpp  WaylandFrameSource.h  WindowsFrameSource.cpp  WindowsFrameSource.h  X11FrameSource.cpp  X11FrameSource.h  types.cpp  types.h
src/ui/: CaptureExclusion.cpp  CaptureExclusion.h  CaptureFrameWindow.cpp  CaptureFrameWindow.h  CountdownOverlay.cpp  CountdownOverlay.h  MainWindow.cpp  MainWindow.h  RegionSelectorOverlay.cpp  RegionSelectorOverlay.h  frame_geometry.cpp  frame_geometry.h  icons.cpp  icons.h  theme.cpp  theme.h
tests/: test_ffmpeg_probe.cpp
tests/app/: test_frame_geometry.cpp  test_global_hotkey.cpp  test_hotkey_combo.cpp  test_mainwindow.cpp  test_overlays.cpp  test_recording_controller.cpp  test_recording_item.cpp  test_recording_store.cpp  test_region_presets.cpp
tests/recording/: mp4_probe.cpp  mp4_probe.h  test_audio_source.cpp  test_mp4_encoder.cpp  test_recorder.cpp  test_types.cpp  test_x11_source.cpp
tools/: render_icon.cpp  ui_snapshot.cpp
